[gd_scene load_steps=3 format=2]

[ext_resource path="res://Characters/ProjectileSpawner.gd" type="Script" id=1]
[ext_resource path="res://Sounds/FX/quake.wav" type="AudioStream" id=2]

[node name="ProjectileSpawner" type="Node2D"]
script = ExtResource( 1 )
projectilePath = "res://Characters/FallingProjectile.tscn"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 160 )
scale = Vector2( 1, 16 )

[node name="TimerCameraShake" type="Timer" parent="."]
wait_time = 1.9

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
max_distance = 800.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="TimerCameraShake" to="." method="_on_TimerCameraShake_timeout"]
